# agent-wiki-os

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml  test.yml
src/: config.rs  main.rs
src/adapters/: fs.rs  history.rs  mod.rs  sync_state.rs  web.rs
src/cli/: mod.rs
src/engine/: gc.rs  graph.rs  ingest.rs  llm.rs  mod.rs  vector.rs
src/mcp/: mod.rs
src/storage/: mod.rs
tests/: cli_tests.rs  e2e_tests.rs
