[package]
name = "agent-wiki-os"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
chrono = "=0.4.38"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
walkdir = "2.4"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
notify = "6.1.1"
pdf-extract = "0.10.0"
zip = "2.1.3"
quick-xml = "0.39.2"
calamine = "0.34.0"
regex = "1.12.3"
notify-debouncer-mini = "0.7.0"
fastembed = "4.2.0"
